--- a/src/partials/plugins/_cluster.scss
+++ b/src/partials/plugins/_cluster.scss
@@ -1,1 +1,9 @@
 .buttonsLineContainer {}
+
+.theme-light {
+  div[aria-label="Create new cluster"] {
+    svg {
+      fill: var(--text-muted) !important;
+    }
+  }
+}
